# stdman

./: .gitignore  CMakeLists.txt  Makefile.in  vcpkg.txt
.github/workflows/: main.yml
src/: cmdline.hpp  exception.hpp  groff.hpp  groff_highlight.hpp  groff_section.hpp  html.hpp  main.cpp  op.hpp  parse_state.hpp  render.hpp  str.hpp
